	* Fixed problems with complied packtage !
	* Version 0.1 Packed, and uploaded to the server !
	* Fixed a bug in select system who didn't look at \n in some texts
	* Add support for select text with HTML and <br> balises

2007-03-05  Achraf cherti
	* new function getPrivateKeyPassword() (with i18n support), to replace
	  the generic function getPassword(question, save_password)

2007-03-04  Achraf cherti
	* the default private key is saved and selected by default when
	  the options dialog is loaded.
	* TODO file added.
	* somes improvements in the style of the code and the indentation 
	  of *.xul.
	* FileGPG_GPG.cleanTmpPath(), FileGPG_GPG.getTmpPath() and 
	  FileGPG_GPG.getTmpFile() moved to misc.js. There names are
	  now removeFile(), getTmpDir() and getTmpFile().
	* FireGPG_GPG.putIntoFile() and FireGPG_GPG.getFromFile()
	  are moved to misc.js. There names are now putIntoFile()
	  and getFromFile().
	* FireGPG_GPG.runCommand() is moved to misc.js. The new name
	  is runCommand().
	* new dialog to enter the private key password.
	* new function getPassword() to get the private key password.
	* new dialog to show texts (showtext.xul)
	* new functions to show a text in showtext.js and misc.js (showText)

2007-03-04  Maximilien Cuony
	* Some modification for errors of improvements of code's style
	* Re-Implementation of firegpgGPG.listkey(private)
	* List key in option dialog show only private keys now
	* Add implementation for show the option dialog with the menu
	* Class cselect : can now get the selection of texts (not textarea or input)
	* Fix an error in the popup system
	* Class select : getSelection work !
	* Class select : isSelectionEdit implemented
	* Class select : setSelection implemented
	* Class select is finished !
	* Add menu incons (all with GPL's license)
	* cgpg : crypt and dcrypt added
	* Add fr locate
	* Add base menu's icone
	* Add comment 'http://firegpg.tuxfamily.org' for signs and crypts
	* Update URL link