@@ -1,5 +1,8 @@
 <!ENTITY prefwindow.title "Options de FireGPG">
 <!ENTITY pane1.title "Options de FireGPG">
-<!ENTITY check_gmail_enabled.label "Support GMail">
-<!ENTITY check_gmail_enabled.accesskey "G">
-<!ENTITY label_private_keys.text "Clé privée par défaut :">
+<!ENTITY gmail-enabled-checkbox.label "Support GMail">
+<!ENTITY gmail-enabled-checkbox.accesskey "G">
+<!ENTITY private-keys-label.text "Clé privée par défaut :">
+<!ENTITY show-website-checkbox "Afficher le site officiel de FireGPG dans le texte signé ou chiffré.">
+<!ENTITY change-gpg-path-button "Changer le chemin">
+<!ENTITY change-gpg-path-checkbox "Spécifier le chemin de GPG manuellement :">
